bug: Fix issue with the restart button not positioning correctly on small screens

--- a/css/app.css
+++ b/css/app.css
@@ -220,7 +220,7 @@ button {
         width: 50%;
     }
     .restart {
-        width: 10%;
+        width: 10% !important;
     }
 }
  
